# KaiTools

./: .gitignore  DESIGN.md  PRIVACY.md  README.md  design-qa.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: App.vue  jsqr.d.ts  main.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  rust_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: document.rs  http.rs  json.rs  keyboard.rs  mod.rs  picker.rs
src/api/: json.ts
src/components/: AppShell.vue  CommandPalette.vue  HistoryDrawer.vue  SettingsModal.vue  Sidebar.vue  TitleBar.vue  WindowChrome.vue
src/components/tool/: EditorPane.vue  EmptyState.vue  SplitWorkspace.vue  StatusBar.vue  ToolHeader.vue  ToolPage.vue  ToolPanel.vue  ToolToolbar.vue
src/composables/: useToolHistory.ts
src/lib/: download.ts  picker.ts  theme.ts
src/stores/: history.ts  nav.ts  settings.ts  theme.ts
src/styles/: main.css
src/tools/: registry.ts  types.ts
src/tools/base-convert/: BaseConvert.vue  index.ts
src/tools/base64-url/: Base64Url.vue  index.ts
src/tools/code-diff/: CodeDiff.vue  index.ts
src/tools/code-formatter/: CodeFormatter.vue  index.ts
src/tools/color/: ColorTool.vue  PickerRoot.vue  index.ts
src/tools/crypto/: CryptoTool.vue  index.ts
src/types/: diff-match-patch.d.ts  formatters.d.ts
(+32 files in other folders)
